--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,1 +1,1 @@
-{ "dependencies": { "axios": "^1.6.7", "cron": "^3.1.6", "onoff": "^6.0.3" } }
+{ "dependencies": { "axios": "^1.6.7", "cron": "^3.1.6", "onoff": "^6.0.3" },  "trustedDependencies": ["onoff", "epoll"] }
